==> 8bitgeek/caribou-rtos/target/chip/nxp/lpc2103/src/chip.c <==
#include <chip/chip.h>
#include <chip/lpc2103.h>
#include <chip/stack.h>
#define	MODE_USR			0x10			/* User Mode */
#define	MODE_FIQ			0x11			/* FIQ Mode */
#define	MODE_IRQ			0x12			/* IRQ Mode */
#define	MODE_SVC			0x13			/* Supervisor Mode */
#define	MODE_ABT			0x17			/* Abort Mode */
#define	MODE_UND			0x1B			/* Undefined Mode */
#define	MODE_SYS			0x1F			/* System Mode */
#define	I_BIT				0x80			/* when I bit is set, IRQ is disabled */
#define	F_BIT				0x40			/* when F bit is set, FIQ is disabled */
#define MAX_IRQ	32
#define	disable_interrupts() \
	__asm( \
		"	mrs		r0,cpsr					\n"	\
		"	orr		r0,r0,#0x80				\n" \
		"	msr		cpsr_c,r0				\n" \
		"	orr		r0,r0,#0x40				\n" \
		"	msr		cpsr_c,r0				\n" \
		)
#define enable_interrupts() \
	__asm( \
		"	mrs		r0,cpsr					\n"	\
		"	bic		r0,r0,#(0x80|0x40)		\n" \
		"	msr		cpsr_c,r0				\n" \
		)
#define disable_irq() \
	__asm( \
		"	mrs		r0,cpsr					\n"	\
		"	orr		r0,r0,#0x80				\n" \
		"	msr		cpsr_c,r0				\n" \
		)
#define enable_irq() \
	__asm( \
		"	mrs		r0,cpsr					\n"	\
		"	bic		r0,r0,#0x80				\n" \
		"	msr		cpsr_c,r0				\n" \
		)
#define disable_fiq() \
	__asm( \
		"	mrs		r0,cpsr					\n"	\
		"	orr		r0,r0,#0x40				\n" \
		"	msr		cpsr_c,r0				\n" \
		)
#define enable_fiq() \
	__asm( \
		"	mrs		r0,cpsr					\n"	\
		"	bic		r0,r0,#0x40				\n" \
		"	msr		cpsr_c,r0				\n" \
		)

void chip_systick_irq_force(void)
{
	VICSoftInt |= 1<<(uint32_t)Vector_TIMER0;
}

int chip_systick_irq_state(void)
{
	return (T0MCR & T0MCR_MR0I) ? 1 : 0;
}

int chip_systick_irq_enable(void)
{
	int state = chip_interrupts_disable();
	int rc = chip_systick_irq_state();
	T0MCR |= T0MCR_MR0I; /** enable interrupts on this timer channel. */
	chip_interrupts_set(state);
}

int chip_systick_irq_disable(void)
{
	int state = chip_interrupts_disable();
	int rc = chip_systick_irq_state();
	T0MCR &= ~T0MCR_MR0I; /** disable interrupts on this timer channel. */
	chip_interrupts_set(state);
	return rc;
}

void chip_init(int systick_hz)
{
	/** Interrupts are now disabled... */
	disable_interrupts();
	resetVectorIRQCount();

	/** initialize major subsystems... */
	//initializeVIC();						/* initialize the Vectored Interrupt Controller */

	/** initialize system timer */
	initializeTIMER0();

    /** Watchdog active from here on... */
	initializeWDG();
}

int chip_vector_enable(uint32_t vector)
{
	int rc = chip_vector_enabled(vector);
	uint32_t vectCntlVal = (vector&0x1F) | (1<<5);
	VICIntEnable = (1<<vector);
	switch(vector)
	{
		case 0:		VICVectCntl0 = vectCntlVal;		break;
		case 1:		VICVectCntl1 = vectCntlVal;		break;
		case 2:		VICVectCntl2 = vectCntlVal;		break;
		case 3:		VICVectCntl3 = vectCntlVal;		break;
		case 4:		VICVectCntl4 = vectCntlVal;		break;
		case 5:		VICVectCntl5 = vectCntlVal;		break;
		case 6:		VICVectCntl6 = vectCntlVal;		break;
		case 7:		VICVectCntl7 = vectCntlVal;		break;
		case 8:		VICVectCntl8 = vectCntlVal;		break;
		case 9:		VICVectCntl9 = vectCntlVal;		break;
		case 10:	VICVectCntl10 = vectCntlVal;	break;
		case 11:	VICVectCntl11 = vectCntlVal;	break;
		case 12:	VICVectCntl12 = vectCntlVal;	break;
		case 13:	VICVectCntl13 = vectCntlVal;	break;
		case 14:	VICVectCntl14 = vectCntlVal;	break;
		case 15:	VICVectCntl15 = vectCntlVal;	break;
	}
	return rc;
}

int chip_vector_disable(uint32_t vector)
{
	int rc = chip_vector_enabled(vector);
	uint32_t vectCntlVal = 0;
	VICIntEnClr = (1<<vector);
	switch(vector)
	{
		case 0:		VICVectCntl0 = vectCntlVal;		break;
		case 1:		VICVectCntl1 = vectCntlVal;		break;
		case 2:		VICVectCntl2 = vectCntlVal;		break;
		case 3:		VICVectCntl3 = vectCntlVal;		break;
		case 4:		VICVectCntl4 = vectCntlVal;		break;
		case 5:		VICVectCntl5 = vectCntlVal;		break;
		case 6:		VICVectCntl6 = vectCntlVal;		break;
		case 7:		VICVectCntl7 = vectCntlVal;		break;
		case 8:		VICVectCntl8 = vectCntlVal;		break;
		case 9:		VICVectCntl9 = vectCntlVal;		break;
		case 10:	VICVectCntl10 = vectCntlVal;	break;
		case 11:	VICVectCntl11 = vectCntlVal;	break;
		case 12:	VICVectCntl12 = vectCntlVal;	break;
		case 13:	VICVectCntl13 = vectCntlVal;	break;
		case 14:	VICVectCntl14 = vectCntlVal;	break;
		case 15:	VICVectCntl15 = vectCntlVal;	break;
	}
	return rc;
}
