==> 8bitgeek/caribou-rtos/caribou/target/chip/stm32/stm32f303/src/chip.c <==
#include <chip/chip.h>
#include <stm32f30x.h>
#include <stm32f30x_rcc.h>
#include <caribou/kernel/interrupt.h>
#define DELAY_CAL_FACTOR ( 100 )		/* FIXME - run-time calibrate this */
#define isr_enter()					\
	__asm (	"	push	{lr}			\n" \
			"	push	{r4-r7}			\n"	\
			"	push	{r8-r11}		\n"	)
#define isr_exit()					\
	__asm (	"	pop		{r8-r11}		\n"	\
			"	pop		{r4-r7}			\n"	\
			"	pop		{pc}			\n"	)

int chip_systick_irq_state(void)
{
	return (SysTick->CTRL & SysTick_CTRL_TICKINT_Msk) ? 1 : 0;
}

int chip_systick_irq_enable(void)
{
	int rc = (SysTick->CTRL & SysTick_CTRL_TICKINT_Msk) ? 1 : 0;
	SysTick->CTRL |= SysTick_CTRL_TICKINT_Msk;	/* enable systick interrupt */
	return rc;
}

int chip_systick_irq_disable(void)
{
	int rc = (SysTick->CTRL & SysTick_CTRL_TICKINT_Msk) ? 1 : 0;
	SysTick->CTRL &= ~SysTick_CTRL_TICKINT_Msk;	/* disable systick interrupt */
	return rc;
}

void chip_systick_irq_force(void)
{
	SCB->ICSR |= SCB_ICSR_PENDSVSET_Msk;
}

void chip_init(int systick_hz)
{
	/** Interrupts are now disabled... */
	chip_interrupts_disable();

	/** initialize system */
	initSysTick();
	initializeWWDG();
}

int chip_vector_enable(uint32_t vector)
{
	int rc=chip_vector_enabled(vector);
	if ( vector < 32 )
		NVIC->ISER[0] = (1 << (uint32_t)vector);
	else if ( vector < 64 && vector >= 32 )
		NVIC->ISER[1] = (1 << (uint32_t)(vector-32));
	else if ( vector >= 64 )
		NVIC->ISER[2] = (1 << (uint32_t)(vector-64));
	return rc;
}

int chip_vector_disable(uint32_t vector)
{
	int rc=chip_vector_enabled(vector);
	if ( vector < 32 )
		NVIC->ICER[0] = (1 << (uint32_t)vector);
	else if ( vector < 64 && vector >= 32 )
		NVIC->ICER[1] = (1 << (uint32_t)(vector-32));
	else if ( vector >= 64 )
		NVIC->ICER[2] = (1 << (uint32_t)(vector-64));
	return rc;
}
